2005-12-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/win32/ejabberd.nsi: Updated (thanks to Maxim Ryazanov)

	* src/ejabberd.hrl: Updated version
	* src/ejabberd.app: Likewise
	* doc/version.tex: Likewise

2005-12-13  Mickael Remond  <mickael.remond@process-one.net>

	* doc/release_notes_1.0.0.txt: Added preliminary version of ejabberd
	1.0.0 release notes.
	* doc/guide.html: Generated the updated HTML version of the documentation.

2005-12-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: Workaround for gateway subscriptions now
	should be enabled with --enable-roster-gateway-workaround
	* src/mod_roster_odbc.erl: Likewise
	* src/configure.ac: Likewise
	* src/Makefile.in: Likewise

2005-12-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Added logging of termination

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/msgs/*.msg: Updated (thanks to Badlop)

2005-12-08  Mickael Remond  <mickael.remond@process-one.net>

	* contribs/contrib/extract_translations/prepare-translation.sh:
	Small improvements.
	* src/msgs/fr.msg: Updated

2005-12-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pl.msg: Fixed syntax error

	* src/mod_offline.erl: Don't store headline messages
	* src/mod_offline_odbc.erl: Likewise

2005-12-06  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated

2005-12-06  Mickael Remond  <mickael.remond@process-one.net>
        
	* src/ejabberd.cfg.example: Updated

	* src/Makefile.*: Can now be build when the Erlang environment is
	not Erlang/OTP but the Erlang REPOS CDROM.  Still compatible with
	standard Erlang/OTP install
	* aclocal.m4: Likewise
	* src/Makefile.*: Can now be build with Erlang debug_info with
	'make debug=true'

2005-12-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: Updated (thanks to Victor Hugo dos Santos)

	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk)

	* src/msgs/sv.msg: Updated (thanks to Magnus Henoch)
