@@ -1,3 +1,7 @@
+2005-12-14  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_irc/iconv_erl.c: Bugfix (thanks to Tomas Janousek)
+
 2005-12-13  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/win32/ejabberd.nsi: Updated (thanks to Maxim Ryazanov)
